Add encrypted data plane and HTTPS deployment
